--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -42,7 +42,7 @@ body {
   padding: 0px;
   overflow-x: hidden;
   min-width: 320px;
-  background: #FFFFFF;
+  background: #fbf9fe;
   font-family: 'webfont', 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 1.4285em;
