--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -118,11 +118,11 @@ p:last-child {
 --------------------*/
 
 a {
-  color: #4183C4;
+  color: rgba(0, 0, 0, 0.87);
   text-decoration: none;
 }
 a:hover {
-  color: #1e70bf;
+  color: rgba(0, 0, 0, 0.87);
   text-decoration: none;
 }
 
