--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -38,7 +38,7 @@ html {
 }
 body {
   margin: 0px;
-  margin-bottom: 27px; */
+  /* margin-bottom: 27px; */
   padding: 0px;
   overflow-x: hidden;
   min-width: 320px;
